--- a/package.json
+++ b/package.json
@@ -24,7 +24,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@eslint/js": "^9.22.0",
     "@types/react": "~18.3.12",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.3.3"
   },
   "private": true
